test/pass/internal/try_except_return_fold.lly
define f(a: integer) : integer
{
    try:
        return 1
    except Exception:
        return 2
}
