test/fail/internal/invalid_try_except_return_fold.lly
#[
SyntaxError: Missing return statement at end of function.
Where: File "invalid_try_except_return_fold.lly" at line 12
]#

define f(a: integer => integer)
{
    try:
        a = 1
    except Exception:
        return 2
}
